--- a/src/App.css
+++ b/src/App.css
@@ -74,17 +74,67 @@ body{
 }
 
 .product-img{
-    height: 92px;
-    width: 92px;
+    height: 80px;
+    width: 80px;
     border-radius: 32px;
-    top: -670px;
-    bottom: -20%;
-    margin-top: -00px;
-    margin-bottom: -00px;
+    top: 0px;
+    bottom: 0px;
+    position: absolute;
+    margin-top: -600px;
+    margin-bottom: -100px;
+    margin-left: 100px;
+}
+.product-img1{
+    height: 50px;
+    width: 50px;
+    border-radius: 32px;
+    top: 100px;
+    bottom: 0px;
+    position: absolute;
+    margin-top: -600px;
+    margin-bottom: -100px;
+    margin-left: 100px;
+    margin-right: -90px;
+}
+.product-title{
+  
+  margin-top: -580px;
+  margin-bottom: -100px;
+  margin-left: -900px;
+  text-align: right;
+  position: relative;
+}
+.price{
+  margin-right: -650px;
+  margin-top: 110px;
+  margin-left: -100px;
+}
+.prod-title1{
+  margin-top: 50px;
+  margin-bottom: -900px;
+  margin-left: 600px; 
+  position: relative;
+}
+.price1{
+  margin-right: -650px;
+  margin-top: 900px;
+  margin-left: -100px;
+}
+.btn-success{
+  margin-left: 500px;
+  position: relative;
+  margin-top: -70px;
+}
+.total{
+  margin-left: 400px;
+  margin-top: 50px;
 }
 
+
+
+
 .btn-success{
-  text-align: center;
+  margin-bottom: -800px;
 }
 
 .product-img1{
@@ -95,12 +145,7 @@ body{
 
 }
 
-/*.product-title{
-    height: 48px;
-    width: 376px;
-    margin-left: 240px;
-    margin-top: -430px;
-}*/
+
 
 .flex-col{
   flex-direction: column;
